--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <nav id="navbar"></nav>
+    <nav id="navbar">
+
+    </nav>
 
     <main id="main-doc">
 
         <section class="main-section">
+            <header>Introduction</header>
+            
+            <article>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos numquam est obcaecati velit ipsa exercitationem soluta nesciunt possimus eum, laborum dicta repellendus. Aspernatur doloremque, fugiat corrupti dignissimos dolore quidem labore!
+            </article>
 
         </section>
 
@@ -36,6 +43,6 @@
     </main>
 
 
-    https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
