--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
     <nav id="navbar">
+        <header>Documentation Kuno</header>
 
+        <a href="#Introduction" class="nav-link" >Introduction</a>
+        <a href="#What_You_Should_Always_Know" class="nav-link">What You Should Always Know</a>
+        <a href="#JavaScript_and_Java" class="nav-link">JavaScript and Java</a>
+        <a href="#Hello_World" class="nav-link">Hello World</a>
+        <a href="#Variables" class="nav-link">Variables</a>
     </nav>
 
     <main id="main-doc">
