--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documentation Page</title>
 
+    <script src="js/script.js"></script>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <nav id="navbar">
-        <header>Documentation Kuno</header>
-
-        <a href="#Introduction" class="nav-link" >Introduction</a>
-        <a href="#What_You_Should_Always_Know" class="nav-link">What You Should Always Know</a>
-        <a href="#JavaScript_and_Java" class="nav-link">JavaScript and Java</a>
-        <a href="#Hello_World" class="nav-link">Hello World</a>
-        <a href="#Variables" class="nav-link">Variables</a>
-    </nav>
+  <nav id="navbar">
+            <header>Documentation Kuno</header>
+    
+            <a href="#Introduction" class="nav-link" >Introduction</a>
+            <a href="#What_You_Should_Always_Know" class="nav-link">What You Should Always Know</a>
+            <a href="#JavaScript_and_Java" class="nav-link">JavaScript and Java</a>
+            <a href="#Hello_World" class="nav-link">Hello World</a>
+            <a href="#Variables" class="nav-link">Variables</a>
+        </nav>
+    
 
     <main id="main-doc">
 
@@ -127,8 +129,7 @@
 
 
     </main>
-
-
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+   
 </body>
 </html>
